# aoc2024

./: .clang-format  .gitignore  CMakeLists.txt  README.md  aoc2024.cpp  flake.nix
days/: day0.cpp  day0.h  day1.cpp  day1.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  day7.cpp  day7.h  day8.cpp  day8.h
util/: matrix.cpp  matrix.h
